--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f9;
@@ -13,7 +12,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Form Styles */
 form {
   background: #fff;
   padding: 20px;
@@ -49,6 +47,11 @@ form input:focus {
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
+.container{
+  display: flex;
+  
+}
+
 form button {
   width: 100%;
   padding: 10px;
@@ -71,7 +74,21 @@ form span {
   display: block;
 }
 
-/* Table Styles */
+.table-container{
+  position: 50% 50%;
+  margin:2vw 0 0 0;
+}
+
+.search-button{
+  margin:2vw 0;
+}
+
+.search-btn{
+  padding: 1vw;
+  width: 100%;
+  font-size: 1.5rem;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -101,11 +118,11 @@ table tr:hover {
   background-color: #f1f1f1;
 }
 
-/* Pagination Styles */
+
 .pagination {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 2vw;
 }
 
 .pagination button {
@@ -127,7 +144,29 @@ table tr:hover {
   cursor: not-allowed;
 }
 
-/* Mobile Responsiveness */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.home,
+.services,
+.reports,
+.contact,
+.events,
+.support {
+  display: flex;
+  margin-left: 260px;
+  font-size: 2rem;
+}
+
+.download-btn{
+  border: solid 0px ;
+  border-color: #000000;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 @media (max-width: 768px) {
   table {
     display: block;
