--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,21 @@ h1 {
   margin-bottom: 20px;
 }
 
+/* .formcontianer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+} */
+
 form {
+  width: 65%;
   background: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
+  /* max-width: 400px; */
   margin: 0 auto 30px;
+  margin-top: 2vw;
 }
 
 form div {
@@ -41,6 +49,15 @@ form input {
   box-sizing: border-box;
 }
 
+form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
 form input:focus {
   border-color: #007bff;
   outline: none;
@@ -49,6 +66,7 @@ form input:focus {
 
 .container{
   display: flex;
+  justify-content: start;
   
 }
 
@@ -118,6 +136,18 @@ table tr:hover {
   background-color: #f1f1f1;
 }
 
+select {
+  margin: 0 0 2vw 0;
+  padding: 10px 20px;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.pagination-option{
+  display: flex;
+  justify-content: space-between;
+}
+
 
 .pagination {
   display: flex;
@@ -161,7 +191,7 @@ table tr:hover {
 }
 
 .download-btn{
-  border: solid 0px ;
+  border: solid 1px ;
   border-color: #000000;
   border-radius: 10px;
   padding: 20px;
